@@ -78,7 +78,7 @@ Finally, we are ready to run the deployment:
 
 .. code-block:: console
 
-  $ ./batou local dev localhost
+  $ ./batou local
   Updating Tick > File(hello) > Presence(hello)
   Updating Tick > File(hello) > Content(hello)
   Updating Tick > File(hello) > Mode(hello)
@@ -176,7 +176,7 @@ Run batou next:
 
 .. code-block:: console
 
-  $ ./batou local dev localhost
+  $ ./batou local
   Updating Supervisor > Buildout > File(buildout.cfg) > Content(buildout.cfg)
   Updating Supervisor > Buildout
 
@@ -261,7 +261,7 @@ working directory:
 
 .. code-block:: console
 
-  $ ./batou local dev localhost
+  $ ./batou local
   Updating Supervisor > Buildout > File(buildout.cfg) > Content(buildout.cfg)
   Updating Supervisor > Buildout
   $ work/supervisor/bin/supervisord
@@ -332,7 +332,7 @@ controlled tick program are running immediately afterwards:
 
 .. code-block:: console
 
-  $ ./batou local dev localhost
+  $ ./batou local
   Updating Supervisor
   $ work/supervisor/bin/supervisorctl
   tick                             RUNNING    pid 6021, uptime 0:00:17
@@ -346,7 +346,7 @@ changes. Change, say, the priority of the tick program by editing
 
 .. code-block:: console
 
-  $ ./batou local dev localhost
+  $ ./batou local
   Updating Supervisor > Buildout > File(buildout.cfg) > Content(buildout.cfg)
   Updating Supervisor > Buildout
   Updating Supervisor
