@@ -74,7 +74,7 @@ embedded ``batou`` command and batou will install itself and run your command:
 
     $ hg clone <url-to-your-repository-server> myproject
     $ cd myproject
-    $ ./batou local dev localhost
+    $ ./batou local
     Preparing virtualenv in .batou ...
     Pre-installing batou - this can take a while...
     ...
